<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFA000"
    tools:context=".NewGame">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="32dp"
        android:text="@string/new_game"
        android:textColor="#FF5722"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/textView4"
        android:ems="10"
        android:layout_marginLeft="32dp"
        android:layout_centerVertical="true"
        android:inputType="number" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:background="#FFEB3B"
        android:onClick="sendGame"
        android:text="@string/submit"
        android:textSize="14sp"
        tools:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_centerVertical="true"
        android:text="@string/input2"
        android:textSize="18sp" />

</RelativeLayout>